--- a/src/scss/landingpage.scss
+++ b/src/scss/landingpage.scss
@@ -52,6 +52,7 @@
       }
 
       .landing-button {
+        cursor: pointer;
         min-width: 320px;
         margin-top: 1.4em;
         font-weight: 400;
